tester/src/test/aya/failure/struct/field-type-mismatch.aya.txt
In file $FILE:14:30 ->

  12 | 
  13 | def test-nat-pair : Pair Nat Nat =>
  14 |   new Pair Nat Nat { | fst => make-pair Nat Nat zero zero | snd => suc zero }
                                     ^-------------------------^
  
Error: The expected type `Nat` does not match the actual type `Pair Nat Nat`
Tycking interrupted due to error(s).
What are you doing?
